# momiji

./: CLAUDE.md  README.ja.md  README.md  pyproject.toml
assets/: momiji.ai
src/momiji/: __init__.py  __main__.py  app.py  config.py  headers.py  http.py  server.py  tls.py
src/momiji/http/: __init__.py  build.py  h1.py  h2.py  h3.py  handle.py  handler.py  hpack.py  huffman.py  huffman_table.py  models.py  optimize.py  parse.py  process.py  qpack.py  qpack_table.py  websocket.py
src/momiji/protocol/: http.py  quic.py  tls.py
