[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-momiji"
version = "0.1.0"
description = "Powerful Web Application Framework and Server for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "uvloop",
    "async-lru",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "zstandard",
    "brotlicffi",
    "puremagic"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.uv.build-backend]
module-name = "momiji"
