[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-momiji"
version = "0.1.3"
description = "Powerful Web Application Framework and Server for Python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "h2",
    "aioquic",
    "uvloop",
    "async-lru",
    "minify-html",
    "rcssmin",
    "rjsmin",
    "scour",
    "zstandard",
    "brotlicffi"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[tool.uv.sources]
aioquic = { git = "https://github.com/nercone-forks/aioquic", branch = "feature/pqc-support" }

[tool.uv.build-backend]
module-name = "momiji"
